# finance_tracker

./: .gitignore  Makefile  README.md  compose.dev.yml  compose.yml
backend/: Dockerfile  app.py  common.py  main.py  pyproject.toml
backend/expenditure/: expenditure.py  expenditure_router.py
backend/income/: income.py  income_router.py
backend/schemas/: expenditure.py  income.py
backend/tests/: conftest.py  constants.py
backend/tests/income/: test_income.py
db/: Dockerfile  finances.sql  init_db.sh
frontend/: eslint.config.js  package.json
frontend/src/: App.tsx
frontend/src/pages/: dashboard.tsx  expenditure.tsx  house.tsx  income.tsx  limits.tsx  profile.tsx  settings.tsx
frontend/src/stylesheets/: main.scss
frontend/src/stylesheets/base/: _base.scss
frontend/src/stylesheets/components/: _buttons.scss  _left-tabs.scss  _right-tabs.scss  _round-toggle.scss
frontend/src/stylesheets/layout/: _navbar.scss
frontend/src/stylesheets/themes/: _dark.scss  _default.scss
