[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "asyncpg>=0.30.0",
    "asyncpg-stubs>=0.30.2",
    "fastapi[standard]>=0.118.2",
    "pytest>=8.4.2",
    "uvicorn[standard]>=0.37.0",
]
